# GitConfigurator

./: CMakeLists.txt  configure_window.cpp  configure_window.h  configure_window.ui  git_configure.rc  gitconf_parser.cpp  gitconf_parser.h  gitconf_tree_model.cpp  gitconf_tree_model.h  hosts_parser.h  main.cpp
cmakeconf/: compiler_conf.cmake
